# code-audit-system-java21

./: .gitignore  DEEPSEEK_INSTRUCTIONS_METHOD_TAINT.md  DEEPSEEK_INSTRUCTIONS_TRANSITIVE_SINK.md  DESIGN.md  JAVAPARSER_MIGRATION.md  MIGRATION.md  README.md  SYMBOL_SOLVER_说明.md  pom.xml  temp_findings.json  审计系统全流程与技术说明.md
.mimocode/command/: test.md  understand.md
.mimocode/skill/vulnerability-audit/: SKILL.md
codeql/java/: qlpack.yml
codeql/java/actuator/: actuator_endpoints.ql  actuator_expose_all.ql  actuator_no_security.ql  actuator_security.ql
codeql/java/authorization/: debug_bypass.ql  endpoints.ql  global_auth.ql  jaxrs_missing_auth.ql  missing_security_config.ql  resource_ids.ql  unprotected.ql
codeql/java/command_injection/: bash_concat_injection.ql  cmd_sanitize.ql  cmd_taint.ql  process_builder.ql  runtime_exec.ql  string_replace_to_exec.ql
codeql/java/crlf_injection/: header_taint.ql  response_header.ql
codeql/java/deserialization/: json_unsafe.ql  native_deser.ql  serializable_api.ql  xml_deser.ql
codeql/java/file_upload/: extension_check.ql  mime_check.ql  upload_endpoints.ql  upload_path.ql
codeql/java/h2_rce/: h2_console.ql  h2_datasource.ql  h2_init_script.ql
codeql/java/ssrf/: url_taint.ql  (+5 more)
docs/: audit-memory-evolution.md
hunter-prompts/: audit-actuator.md  audit-authorization.md  audit-code-execution.md  audit-command-injection.md  audit-component-vulns.md  audit-crlf-injection.md  audit-deserialization.md  audit-file-operations.md  audit-file-upload.md  audit-h2-rce.md  audit-http-output.md  audit-log4j-jndi.md  audit-open-redirect.md  audit-path-traversal.md  audit-sql-injection.md  audit-ssrf.md  audit-ssti.md  audit-unsafe-parsing.md  audit-xss.md  audit-xxe.md
sidecar/: .gitignore  README.md  pyproject.toml
sidecar/src/claude_audit_sidecar/: __main__.py  app.py  errors.py  models.py  runner.py  sdk_runner.py  settings.py
sidecar/tests/: test_api.py  test_goal_mode.py
(+164 files in other folders)
